--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    body: >-
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-29'
+    PS_UUID: 066fca10-f3e5-11e8-b6a0-333b77d72d16
+  - body: >-
       # Tests 
        - ✔ Device is online
        - ✔ Reload supervisor on a running device
