--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,35 @@
 results:
   -
-    body: >-
+    provision_time: 1m 8s
+    image_size: 1724 Mb
+    balena_os_version: 2.26.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.26.0+rev1.prod -> 2.26.0+rev1.prod]
+       - ✔ Image filename format
+       - ✖ Push a mono-container to the application
+       - ✔ Push a multi-container application
+       - ✔ Update supervisor through the API
+       - ✔ Reload supervisor on a running device
+       - ✔ Update device status with resin-device-progress
+       - ✔ Sync application container
+
+
+      # Summary
+      - planned: 10
+      - pass: 9
+      - fail: 1
+
+      # Fails
+      ## Push a mono-container to the application
+          ✖ Push a mono-container to the application
+          undefined
+    author: null
+    timestamp: '2018-11-29'
+    PS_UUID: 933983f0-f3f4-11e8-b0ba-9b2526288176
+  - body: >-
       # Tests 
        - ✔ Device is online
        - ✔ Reload supervisor on a running device
