--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 27s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: '2018-11-30'
+    PS_UUID: 60dd8b80-f490-11e8-ba9b-35cc445396bb
+  - provision_time: 1m 27s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
