--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,44 @@
 results:
   -
-    provision_time: 1m 6s
+    provision_time: 1m 37s
+    image_size: 1724 Mb
+    balena_os_version: 2.27.0+rev1.prod
+    body: |-
+      # Tests 
+       - ✔ Device is online
+       - ✖ Image filename format
+       - ✔ Device reported hostOS version
+       - ✔ Balena host OS update [2.27.0+rev1.prod -> 2.27.0+rev1.prod]
+       - ✔ Push a mono-container to the application
+       - ✔ Add a device environment variable
+       - ✔ Identification LED
+       - ✔ Enter running application container
+       - ✔ Sync application container
+       - ✔ Update device status with resin-device-progress
+       - ✔ Update supervisor through the API
+       - ✔ Push a multi-container application
+       - ✔ Reload supervisor on a running device
+       - ✔ General Bluetooth test
+       - ✔ Boot/Shutdown splash screen
+       - ✔ Kernel boot logo/Reboot splash screen
+       - ✔ Reboot while application is running
+       - ✔ Enable serial port on UART0/ttyAMA0
+       - ✔ Enable serial port on UART1/MiniUART/ttyS0
+
+
+      # Summary
+      - planned: 19
+      - pass: 18
+      - fail: 1
+
+      # Fails
+      ## Image filename format
+          ✖ Image filename format
+          undefined
+    author: null
+    timestamp: 2018-12-3
+    PS_UUID: 96c3c540-f6eb-11e8-afa0-8307aa1a0303
+  - provision_time: 1m 6s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
