--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: 31b14b00-f7a4-11e8-b69f-ffcdb1eae937
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: 03bd40d0-f7a1-11e8-8b5f-c7a0cae23902
   - provision_time: 1m 7s
     image_size: 1724 Mb
