--- a/results.yaml
+++ b/results.yaml
@@ -1,6 +1,18 @@
 results:
   -
-    provision_time: 1m 7s
+    body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
+    PS_UUID: 91821a00-f7a4-11e8-8069-8bdb340772ac
+  - provision_time: 1m 7s
     image_size: 1724 Mb
     balena_os_version: 2.26.0+rev1.prod
     body: |-
