--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: e5c2b480-f7a4-11e8-86ec-d5aa4c313d3f
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: 91821a00-f7a4-11e8-8069-8bdb340772ac
   - provision_time: 1m 7s
     image_size: 1724 Mb
