--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: 9eb55ab0-f7a5-11e8-8c1e-752ad7a01119
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: 7f17c990-f7a5-11e8-b5e9-dff3cbd8d4e2
   - body: |-
       # Tests 
