--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: f40b0eb0-f7a5-11e8-b048-8521339e8f7b
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: cb035d60-f7a5-11e8-9a58-fb252f9c9612
   - body: |-
       # Tests 
