--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: b4eead20-f7a7-11e8-b80c-a7e9f3f806a7
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: 9a393680-f7a7-11e8-836b-19aa29ce9d7a
   - body: |-
       # Tests 
