--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: f3db3a30-f7a7-11e8-a9e0-3bb2de1cc325
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: d368a5d0-f7a7-11e8-9c40-ab73a7c1b3fe
   - body: |-
       # Tests 
