--- a/results.yaml
+++ b/results.yaml
@@ -11,6 +11,18 @@ results:
 
       # Fails
     timestamp: 2018-12-4
+    PS_UUID: 4fc40420-f7a9-11e8-baef-8dd4b83510c7
+  - body: |-
+      # Tests 
+
+
+      # Summary
+      - planned: 0
+      - pass: 0
+      - fail: 0
+
+      # Fails
+    timestamp: 2018-12-4
     PS_UUID: 10a0fdc0-f7a9-11e8-ba32-e5613a405075
   - body: |-
       # Tests 
