--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "string-to-stream": "^1.1.1",
     "symbols": "0.0.6",
     "tap": "^12.0.1",
-    "tap-parser": "^7.0.0"
+    "tap-parser": "^7.0.0",
+    "unzip": "^0.1.11"
   },
   "devDependencies": {
     "eslint": "^4.18.1",
