Define remote worker
This worker expectes a worker API to be exposed on the define URL.
The definition for this API can be found here: https://github.com/balena-io/leviathan-worker/blob/master/lib/index.ts

Change-type: patch
Signed-off-by: Theodor Gherzan <theodor@resin.io>

--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "lodash": "^4.17.10",
     "mz": "^2.7.0",
     "node-ssh": "^5.1.2",
+    "node-zip": "^1.1.1",
     "npm": "^6.5.0",
     "pensieve-sdk": "^1.0.0",
     "randomstring": "^1.1.5",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4",
     "resin-cli-visuals": "^1.4.0",
     "resin-image-fs": "^4.0.2",
     "resin-semver": "^1.4.0",
