Implement the preload test
This commit also bring docker in our container as it is needed by the preload process.

Signed-off-by: Theodor Gherzan <theodor@balena.io>

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/balena-io/balena-tests",
   "dependencies": {
     "ajv": "^6.5.0",
+    "balena-cli": "^10.9.0",
     "balena-sdk": "^11.0.0",
     "balena-sync": "^10.0.0",
     "bluebird": "^3.5.1",
