--- a/core/package.json
+++ b/core/package.json
@@ -25,10 +25,13 @@
   "dependencies": {
     "ajv": "^6.5.0",
     "ajv-semver": "git+https://github.com/balena-io-modules/ajv-semver.git#resin-semver",
+    "async-mutex": "^0.1.3",
     "balena-sdk": "^11.0.0",
     "balena-sync": "^10.0.0",
     "bluebird": "^3.5.1",
     "bluebird-retry": "^0.11.0",
+    "express": "^4.17.1",
+    "express-ws": "^4.0.0",
     "firmata": "^0.19.1",
     "fs-extra": "^3.0.1",
     "indent-string": "^3.2.0",
@@ -43,14 +46,16 @@
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "resin-cli-visuals": "^1.4.0",
-    "resin-image-fs": "^4.0.2",
+    "resin-image-fs": "^5.0.8",
     "resin-semver": "^1.4.0",
     "simple-git": "^1.85.0",
     "ssh-keygen": "^0.4.1",
     "string-to-stream": "^1.1.1",
     "tap": "^13.1.1",
     "tap-parser": "^7.0.0",
-    "unzip": "^0.1.11"
+    "tar-fs": "^2.0.0",
+    "unzip": "^0.1.11",
+    "websocket-stream": "^5.5.0"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
